# en-data

./: .gitignore  columns.txt  energinetdata.py  exchange_all.py  exchange_uk.py  pyproject.toml  restclient.py  solar_s_curve.py  ve_s_curve.py  veplots.py
src/en_data/: consumption.py  energinetdata.py  exchange_uk.py  global_swb_as_power_plant.py  solar_s_curve.py  ve_s_curve.py
